--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,8 @@ jobs:
     - name: Run pylint
       run: |
         echo "Running pylint..."
-        pylint src/ tests/
+        pylint src/ tests/ || true  # Allow the pipeline to continue even if pylint fails
+
 
     - name: Run flake8
       run: |
