--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,11 @@
 [build-system]
-# pyproject.toml support added in 61.0.0, but for some reason fails to process
-# this file until version 62.
 requires = ["setuptools >= 62"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "helloworld"
-# version is populated by setuptools in setup.py (from VERSION.txt)
 dynamic = ["version"]
 description = "The familiar example program in Python"
-# Newer versions of setuptools (that can detect metadata in pyproject.toml)
-# don't seem to support python 2 anymore.
 requires-python = ">= 3"
 readme = "README.md"
 license = { file = "LICENSE" }
@@ -23,7 +18,6 @@ keywords = ["example", "documentation", "tutorial"]
 Homepage = "http://github.com/dbarnett/python-helloworld"
 Repository = "http://github.com/dbarnett/python-helloworld"
 
-# command-line executables to expose
 [project.scripts]
 helloworld_in_python = "helloworld.main:main"
 
@@ -31,4 +25,13 @@ helloworld_in_python = "helloworld.main:main"
 name = "python-customer-usecase-repo"
 version = "0.1.0"
 description = "Your project description"
-authors = ["Your Pari <parinithareddy29.email@example.com>"]
+authors = ["Pari <parinithareddy29.email@example.com>"]
+package-mode = false
+
+[tool.poetry.dependencies]
+python = ">=3.12,<3.13"
+
+[tool.poetry.group.dev.dependencies]
+pylint = "^2.15.0"
+flake8 = "^6.0.0"
+pytest = "^7.4.0"
