--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
-sonar.projectKey=pluto
-sonar.projectName=HW_Demo_Python
+sonar.projectKey=HWDemo
+sonar.projectName=HomeyWellDemo
 sonar.projectVersion=1.0
 
 # Path to source code (adjust it according to your project structure)
