--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
 # Required metadata
-sonar.projectKey=HWDemo
-sonar.projectName=HomeyWellDemo
-sonar.projectVersion=1.0
+#sonar.projectKey=HWDemo
+#sonar.projectName=HomeyWellDemo
+#sonar.projectVersion=1.0
 
 # Path to source code (adjust it according to your project structure)
-sonar.sources=src
+#sonar.sources=src
 
 # Path to tests (if applicable)
-sonar.tests=tests
+#sonar.tests=tests
 
 # Define the language to be Python
-sonar.language=py
+#sonar.language=py
 #sonar.branch.name=child1
