PR -Test Rebase (#18)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: Python Linting and Tests
-
 on:
   push:
     branches:
@@ -7,6 +6,7 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   lint-and-test:
